# ghas-assess

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ghas-assess.yml
examples/: sample-report.docx  sample-report.html
ghas_assess/: __main__.py  assessor.py  client.py  demo.py  findings.py  manual.py  reporters.py
tests/: test_smoke.py
