[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ghas-assess"
version = "2.8.0"
description = "Read-only GitHub Advanced Security posture assessment tool"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["github", "ghas", "advanced-security", "codeql", "dependabot", "secret-scanning", "security", "posture", "assessment", "appsec"]
authors = [{ name = "ghas-assess contributors" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["python-docx>=1.1.0"]

[project.urls]
Homepage = "https://github.com/COVID-cmd/ghas-assess"
Issues = "https://github.com/COVID-cmd/ghas-assess/issues"

[project.scripts]
ghas-assess = "ghas_assess.__main__:main"

[tool.setuptools]
packages = ["ghas_assess"]
